<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EFEF"

    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:background="#85E91E63"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="151dp"
        android:text="@string/app_name"
        android:textColor="#616161"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/message1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#6478E3"
        android:textColorHint="#6576CD"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="163dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email"
        android:textColor="#AE0303"
        android:textColorHint="#6576CD"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="169dp"
        android:layout_height="26dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password"
        android:textColor="#AE0303"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#6478E3"
        android:textColorHint="#6576CD"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="170dp"
        android:hint="@string/sign_in"
        android:labelFor="@id/textView2"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/ForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="461dp"
        android:layout_marginBottom="123dp"
        android:minHeight="48dp"
        android:onClick="forgotPswd"
        android:text="@string/passLost"
        android:textColor="#6478E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="45dp"
        android:text="@string/first"
        android:textColor="#CA6C6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="46dp"
        android:text="@string/register"
        android:textColor="#A7FFEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPass" />

</androidx.constraintlayout.widget.ConstraintLayout>