<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".firstMenuActivity">

    <ImageView
        android:id="@+id/titleView"
        android:layout_width="110dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="148dp"
        android:contentDescription="@string/nulL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/title" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="404dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/session_user"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/andika"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


    <Button
        android:id="@+id/back"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="7dp"
        android:focusableInTouchMode="true"
        android:onClick="goBack"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/session_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="419dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="404dp"
                android:layout_height="700dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/check_for_symptoms"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:keepScreenOn="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/symptomchart" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>